--- a/app/src/main/res/layout/activity_usage.xml
+++ b/app/src/main/res/layout/activity_usage.xml
@@ -7,4 +7,221 @@
     android:layout_height="match_parent"
     tools:context=".Usage">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <ImageView
+      android:id="@+id/imageView22"
+      android:layout_width="515dp"
+      android:layout_height="364dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.0"
+      app:srcCompat="@drawable/rectangle_223" />
+
+  <ImageView
+      android:id="@+id/imageView23"
+      android:layout_width="515dp"
+      android:layout_height="850dp"
+      android:layout_marginTop="60dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/imageView22"
+      app:srcCompat="@drawable/background" />
+
+  <ImageView
+      android:id="@+id/imageView25"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:layout_marginStart="20dp"
+      android:layout_marginTop="20dp"
+      app:layout_constraintBottom_toTopOf="@+id/imageView23"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/imageView22"
+      app:layout_constraintVertical_bias="0.0"
+      app:srcCompat="@drawable/pngwing_com" />
+
+  <TextView
+      android:id="@+id/textView15"
+      android:layout_width="120dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="30dp"
+      android:text="Usage"
+      android:textColor="#FFFFFF"
+      android:textSize="34sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="@+id/imageView25"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toEndOf="@+id/imageView25"
+      app:layout_constraintTop_toTopOf="@+id/imageView25"
+      app:layout_constraintVertical_bias="0.0" />
+
+  <TextView
+      android:id="@+id/textView16"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="40dp"
+      android:layout_marginTop="50dp"
+      android:text="Today"
+      android:textColor="#000000"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/imageView23"
+      app:layout_constraintVertical_bias="0.0" />
+
+  <TextView
+      android:id="@+id/textView17"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="35dp"
+      android:layout_marginTop="50dp"
+      android:text="Week"
+      android:textColor="#000000"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/textView16"
+      app:layout_constraintTop_toTopOf="@+id/imageView23"
+      app:layout_constraintVertical_bias="0.0" />
+
+  <TextView
+      android:id="@+id/textView18"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="50dp"
+      android:layout_marginEnd="35dp"
+      android:text="Month"
+      android:textColor="#4CAF50"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/textView19"
+      app:layout_constraintTop_toTopOf="@+id/imageView23"
+      app:layout_constraintVertical_bias="0.0" />
+
+  <TextView
+      android:id="@+id/textView19"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="50dp"
+      android:layout_marginEnd="40dp"
+      android:text="Year"
+      android:textColor="#000000"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/imageView23"
+      app:layout_constraintVertical_bias="0.0" />
+
+  <ImageView
+      android:id="@+id/imageView28"
+      android:layout_width="350dp"
+      android:layout_height="200dp"
+      android:layout_marginTop="80dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.488"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/imageView23"
+      app:layout_constraintVertical_bias="0.0"
+      app:srcCompat="@drawable/group_2584" />
+
+  <TextView
+      android:id="@+id/textView20"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="October 2022"
+      android:textColor="#1A1E60"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/imageView28"
+      app:layout_constraintVertical_bias="0.0" />
+
+  <ImageView
+      android:id="@+id/imageView30"
+      android:layout_width="40dp"
+      android:layout_height="0dp"
+      android:layout_marginEnd="30dp"
+      app:layout_constraintBottom_toBottomOf="@+id/textView20"
+      app:layout_constraintEnd_toStartOf="@+id/textView20"
+      app:layout_constraintHorizontal_bias="0.923"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/textView20"
+      app:layout_constraintVertical_bias="0.0"
+      app:srcCompat="@drawable/group_2660__1_" />
+
+  <ImageView
+      android:id="@+id/imageView31"
+      android:layout_width="40dp"
+      android:layout_height="0dp"
+      android:layout_marginStart="30dp"
+      android:rotation="180"
+      app:layout_constraintBottom_toBottomOf="@+id/textView20"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toEndOf="@+id/textView20"
+      app:layout_constraintTop_toTopOf="@+id/textView20"
+      app:layout_constraintVertical_bias="0.0"
+      app:srcCompat="@drawable/group_2660__1_" />
+
+  <ImageView
+      android:id="@+id/imageView34"
+      android:layout_width="wrap_content"
+      android:layout_height="445dp"
+      android:layout_marginTop="100dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/imageView23"
+      app:srcCompat="@drawable/group_2666" />
+
+  <ImageView
+      android:id="@+id/imageView35"
+      android:layout_width="200dp"
+      android:layout_height="0dp"
+      android:layout_marginTop="200dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/imageView36"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textView20"
+      app:layout_constraintVertical_bias="1.0"
+      app:srcCompat="@drawable/group_2667" />
+
+  <ImageView
+      android:id="@+id/imageView36"
+      android:layout_width="200dp"
+      android:layout_height="0dp"
+      android:layout_marginTop="200dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="@+id/imageView34"
+      app:layout_constraintTop_toBottomOf="@+id/textView20"
+      app:layout_constraintVertical_bias="0.822"
+      app:srcCompat="@drawable/group_2677" />
+
+  <Button
+      android:id="@+id/button7"
+      android:layout_width="180dp"
+      android:layout_height="50dp"
+      android:layout_marginTop="200dp"
+      android:backgroundTint="#4CAF50"
+      android:text="View Plan"
+      android:textAllCaps="false"
+      android:textColor="#FFFFFF"
+      app:layout_constraintBottom_toBottomOf="@+id/imageView34"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.497"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textView20"
+      app:layout_constraintVertical_bias="0.0" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
